[package]
name = "gateway"
version = "0.2.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[dependencies]
futures = "0.1.13"
tokio-core = "0.1.7"
tokio-proto = "0.1.1"
libloading = "0.4.0"
lazy_static = "0.2.8"

hyper = { git = "https://github.com/hyperium/hyper.git" }

module-interface = { path = "module-interface" }
